--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,10 @@ requires = [ 'setuptools' ]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pysnmptui"
+name = "pysnmptui_K0HAX"
+authors = [
+    { name="Michael Englehorn", email="michael+pypi@englehorn.com" },
+]
 description = "Python SNMP TUI (Terminal User Interface)"
 readme = "README.md"
 requires-python = ">=3.9"
@@ -11,7 +14,7 @@ keywords = ["snmp", "tui"]
 license = {file = "LICENSE"}
 classifiers = [
     "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
-    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3",
 ]
 dependencies = [
     "py-cui==0.1.6",
@@ -20,8 +23,12 @@ dependencies = [
 ]
 dynamic = ["version"]
 
+[project.urls]
+"Homepage" = "https://github.com/K0HAX/pysnmptui"
+"Bug Tracker" = "https://github.com/K0HAX/pysnmptui/issues"
+
 [project.scripts]
-pysnmptui = "snmpui.console_main:console_main"
+pysnmptui = "pysnmptui_K0HAX.console_main:console_main"
 
 [tool.setuptools.dynamic]
 version = {file = "VERSION"}
